--- a/login.html
+++ b/login.html
@@ -19,6 +19,7 @@
         </form>
         <p>No tienes una cuenta? <a href="signup.html">Registro</a></p>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/login.js"></script>
 </body>
 </html>
