--- a/signup.html
+++ b/signup.html
@@ -21,6 +21,7 @@
         </form>
         <p>Ya tienes una cuenta? <a href="login.html">Login</a></p>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/signup.js"></script>
 </body>
 </html>
