--- a/login.html
+++ b/login.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <section>
-        <h2>Login</h2>
+        <h2>RindeMás</h2>
         <form id="loginForm">
             <label>Mail</label>
-            <input type="email" placeholder="..." id="email" required autofocus>
+            <input type="email" placeholder="example@hotmail.com" id="email" required autofocus>
             <label>Contraseña</label>
-            <input type="password" placeholder="..." id="password" required>
+            <input type="password" placeholder="••••••••" id="password" required>
             <input type="submit" value="Ingresar">
         </form>
-        <p>No tienes una cuenta? <a href="signup.html">Registro</a></p>
+        <p>¿No tienes una cuenta? <a href="signup.html">Registrate</a></p>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/login.js"></script>
