--- a/signup.html
+++ b/signup.html
@@ -12,14 +12,14 @@
         <h2>Registro</h2>
         <form id="signupForm">
             <label>Nombre</label>
-            <input type="text" placeholder="..." id="name" required autofocus>
+            <input type="text" placeholder="Juan Perez" id="name" required autofocus>
             <label>Mail</label>
-            <input type="email" placeholder="..." id="email" required>
+            <input type="email" placeholder="example@hotmail.com" id="email" required>
             <label>Contraseña</label>
-            <input type="password" placeholder="..." id="password" required>
+            <input type="password" placeholder="••••••••" id="password" required>
             <input type="submit" value="Registro">
         </form>
-        <p>Ya tienes una cuenta? <a href="login.html">Login</a></p>
+        <p>¿Ya tienes una cuenta? <a href="login.html">Login</a></p>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/signup.js"></script>
